[gd_scene load_steps=4 format=3 uid="uid://c27stdprdg341"]

[ext_resource type="Texture2D" uid="uid://dxcnuu8b5ks86" path="res://Backgrounds/Green.png" id="1_70smg"]
[ext_resource type="Script" path="res://Scenes/PickDeck/pick_deck.gd" id="1_ljn8k"]
[ext_resource type="FontFile" uid="uid://brd03uum54nk1" path="res://Fonts/NineteenEightySeven-MzMJ.ttf" id="2_iq1pn"]

[node name="PickDeck" type="Node"]
script = ExtResource("1_ljn8k")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_70smg")
stretch_mode = 1

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -280.5
offset_top = 112.0
offset_right = 280.5
offset_bottom = 211.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_iq1pn")
theme_override_font_sizes/font_size = 32
text = "Выберите колоду:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="JavaScriptButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -690.5
offset_top = -252.5
offset_right = -333.5
offset_bottom = 252.5
grow_horizontal = 2
grow_vertical = 2
text = "JavaScript"

[node name="TypeScriptButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -178.5
offset_top = -252.5
offset_right = 178.5
offset_bottom = 252.5
grow_horizontal = 2
grow_vertical = 2
text = "TypeScript"

[node name="CsharpButton" type="Button" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -589.0
offset_top = -252.5
offset_right = -232.0
offset_bottom = 252.5
grow_horizontal = 0
grow_vertical = 2
text = "C#"

[node name="GameManager" type="Node" parent="."]

[connection signal="pressed" from="JavaScriptButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="JavaScriptButton" to="." method="_on_java_script_button_pressed"]
[connection signal="pressed" from="TypeScriptButton" to="." method="_on_type_script_button_pressed"]
[connection signal="pressed" from="TypeScriptButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CsharpButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CsharpButton" to="." method="_on_csharp_button_pressed"]
